fixing spacing

--- a/styles.css
+++ b/styles.css
@@ -72,8 +72,8 @@ a {
 }
 
 .lightblock {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 3px;
+    padding-bottom: 3px;
     padding-left: 5%;
     padding-right: 5%;
     
@@ -84,8 +84,8 @@ a {
 }
 
 .darkblock {
-    padding-top: 3%;
-    padding-bottom: 3%;
+    padding-top: 3px;
+    padding-bottom: 3px;
     padding-left: 5%;
     padding-right: 5%;
     display: flex;
